# hanzi_classifier

./: .gitignore  HanziClassifierSystemArchitecture.drawio  README.md  SystemArchitecture.drawio  requirements.txt  requirements_chatbot.txt  requirements_ml.txt
chatbot/: Dockerfile  agent_runner.py  agents.py  classifier_mcp_client.py  main.py  mcp_client.py  pyproject.toml  tools.py
classifier/: Dockerfile  config.yaml  create_dataset.ipynb  data_preprocessing.ipynb  mcp_server.py  pyproject.toml
classifier/checkpoints/hanzi_conv/: best_model.pth
classifier/multi_char_classifier/: config.yaml  create_dummy_dataset.ipynb  dataset.py  inference.py  model.py  train.ipynb  utils.py
classifier/notebooks/: create_dataset.ipynb  mandarin_line_detector.ipynb  training.ipynb
classifier/single_char_classifier/: config.yaml  inference.py  train.py  utils.py
classifier/src/: dataset.py  inference.py  model.py  train.py  utils.py
translator/: Dockerfile  mcp_server.py  pyproject.toml  server.py  test_client.py
